Closed
Bug 1658035
Opened 4 years ago
Closed 4 years ago
[Linux] DMABuf broken
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | fixed |
People
(Reporter: rmader, Assigned: rmader)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Small regression from 1656034, just an oversight. We need test for dmabuf, too :)
Assignee | ||
Comment 1•4 years ago
|
||
Small oversight during review.
Updated•4 years ago
|
Assignee: nobody → robert.mader
Status: NEW → ASSIGNED
Pushed by abutkovits@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/91fb11c7d259
[Linux] WebGL DMABuf broken, r=jgilbert
Updated•4 years ago
|
status-firefox79:
--- → unaffected
status-firefox80:
--- → unaffected
status-firefox81:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Keywords: regression
OS: Unspecified → Linux
Hardware: Unspecified → Desktop
Updated•4 years ago
|
Blocks: egl-linux-vaapi
Summary: [Linux] WebGL DMABuf broken → [Linux] DMABuf broken
Comment 4•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•