Bug 1658035 - [Linux] WebGL DMABuf broken, r=jgilbert

Small oversight during review.

Differential Revision: https://phabricator.services.mozilla.com/D86432